--- a/sphere.styl
+++ b/sphere.styl
@@ -244,6 +244,10 @@ a.details
         font-style normal
         margin-left 0.3em
 
+.not-yet-available
+    opacity .3
+    filter unquote('Alpha(opacity=30) Gray()')
+
 .grid-wrapper
     clearfix()
 
