--- a/sphere.styl
+++ b/sphere.styl
@@ -255,8 +255,72 @@ a.details
 .grid-wrapper
     clearfix()
 
-#top-nav
+#top-nav, footer, #dropdown-login-form
+    *
+        color #b1b2b3
+    a:hover
+        color white
     background gray1
+
+#dropdown-login-form
+    opacity 0
+    top 40px
+    duration = 0.1s
+    -webkit-transition all duration ease-in-out
+    -moz-transition all duration ease-in-out
+    -o-transition all duration ease-in-out
+    transition all duration ease-in-out
+    &.visible
+        top 70px
+        opacity 1
+        z-index 100
+    position fixed
+    width 200px
+    z-index -1
+    right 100px
+    padding 20px
+    padding-bottom 10px
+    border-radius 5px
+    font-size 14px
+    font-weight semibold
+    line-height lines1
+    box-shadow 0 0 10px black
+    *
+        line-height lines1
+    label, input[type="text"], input[type="password"], button
+        display block
+        box-sizing border-box
+        width 100%
+    input[type="text"], input[type="password"]
+        color black
+    label.checkbox
+        font-size 12px
+        //padding (lines1/2) 0
+    input
+        margin-bottom (lines1/2)
+    button
+        color white
+        font-size 13px
+    &:before
+        content "a"
+        font-size 0
+        line-height 0
+        height 0
+        width 0
+        tip-size = 10px
+        border-left tip-size solid transparent
+        border-right tip-size solid transparent
+        border-bottom tip-size solid gray1
+        position absolute
+        margin-top  -30px
+        margin-left 200px - 20px
+        -moz-transform:scale(1.01);
+    p.error
+        display none
+        color red1
+        margin-bottom 10px
+
+#top-nav
     position fixed
     width 100%
     top 0
@@ -275,18 +339,18 @@ a.details
     span
         vertical-align baseline
         color white
+    .nav-right
+        float right
+        font-weight semibold
+        li
+            display inline-block
 
 footer
-    background gray1
     padding-top lines1
     padding-bottom lines2
     font-size 12px
     header
         font-weight semibold
-    *
-        color #b1b2b3
-    a:hover
-        color white
     ul
         float left
         width cols2
@@ -347,7 +411,7 @@ footer
     display inline-block
 
 
-input, input[type="text"], button
+input, input[type="text"], input[type="password"], button
     margin 0
     border-radius 3px
     border 1px solid #bfbfbf
@@ -356,13 +420,22 @@ input, input[type="text"], button
     min-height line-height px
     outline none
     box-sizing content-box
+    .spinner
+        top (lines1/2)
+
+input[type="text"], input[type="password"]
+    &.error
+        border-color red
+        background-color red2 + #466
+        box-shadow 0 0 10px red2
 
 .ie input
     line-height line-height px
 
 
-input[type="text"]:focus
-    border-color green3
+input[type="text"], input[type="password"]
+    &:focus
+        border-color green3
 
 default-gradient()
     box-shadow inset 0 1px 0 0 rgba(255,255,255,0.2)
@@ -385,7 +458,8 @@ button, input[type="button"]
     border 1px solid blue2
     color white
     border-radius 3px
-    box-shadow inset 0 1px 0 0 rgba(255,255,255,0.2), 0 2px 4px gray4
+    //box-shadow inset 0 1px 0 0 rgba(255,255,255,0.2), 0 2px 4px gray4
+    box-shadow inset 0 1px 0 0 rgba(255,255,255,0.2), 0 2px 4px rgba(0,0,0,0.15)
 
     intensity = 0.1
 
@@ -501,6 +575,7 @@ h2
     font-weight semibold
     small
         font-size 15px
+
 
 .page-description
     margin-top lines2 + (lines1/2)
