--- a/client/views/companyProfile/companyProfile.html
+++ b/client/views/companyProfile/companyProfile.html
@@ -3,7 +3,7 @@
     {{#with currentProfile}}
       <header>
         <span class="input-wrapper">
-          <input value="deine mudda"/><button>Speichern</button>
+          <input type="text" value="deine mudda"/><button>Speichern</button>
         </span>
         <h1>{{name}}</h1>
         <button class="export">Exportieren</button>
