--- a/sphere.styl
+++ b/sphere.styl
@@ -870,3 +870,92 @@ h2
             margin-top lines2
         .hand-writing, p
             margin-left (gutter/2px)
+
+
+
+
+
+
+/********************************************
+*********************************************
+Anfang der Styles für die Hoempage
+*********************************************
+*********************************************
+**/
+
+
+
+.greeting
+	font-size 15px
+	margin-top lines2
+
+	.screens
+		float right
+	
+	h1
+		font-size 128.83px
+		line-height lines5
+		font-weight semi-bold
+		letter-spacing -3px
+
+	h2
+		font-size 58.3px
+		line-height lines4
+		font-weight semi-bold
+		letter-spacing 3px
+		
+	h3
+		font-size 25.18px
+		font-style italic
+	
+	.bold
+		font-weight bold
+	
+	.semi-bold
+		font-weight semibold
+
+	.testzugang
+		line-height lines2
+		font-size 17.5px
+		margin-top line
+		
+	.haken
+		height lines2
+		padding-left cols1
+		background url("img/homepage/haken.png") no-repeat 0% 50%
+
+	.fulljustify 
+    text-align justify
+
+	.fulljustify:after 
+    content ""
+    display inline-block
+    width 100%
+
+.functions
+	li
+		width cols4
+		float left
+	
+	h4
+		font-size 19px
+		line-height lines3
+		padding-left cols1
+
+		span
+			padding-top line
+			vertical-align middle
+	
+
+	.headline-pfeil
+		background url("img/homepage/pfeil.png") no-repeat 0% 50%
+	
+
+
+/********************************************
+*********************************************
+Ende der Styles für die Hoempage
+*********************************************
+*********************************************
+**/
+
