homepage: oberer Teil fertig, Tour angefangen

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -1,32 +1,37 @@
 <template name="homepage">
-  <div class="greeting grid-wrapper">
-		<img src="img/homepage/screens.png" class="screens">
-		<h1>
-			Unlock
-		</h1>
-		<h2>
-			the local web
-		</h2>
-		<h3>
-			Qualifizierte 
-			<span class="bold">
-				Leads 
-				<span class="semi-bold">
-					& ideale 
+	<div class="whitebg homepage-bg">
+		<div class="greeting grid-wrapper">
+			<img src="img/homepage/headline.png" class="headline" alt="unlock the local web">
+			<img src="img/homepage/screens3.png" class="screens" alt="Beispiel Screen">
+	<!--
+			<h1>
+				Unlock
+			</h1>
+			<h2>
+				the local web
+			</h2>
+			<h3>
+				Qualifizierte 
+				<span class="bold">
+					Leads 
+					<span class="semi-bold">
+						& ideale 
+					</span>
+					Kunden-
+					<br>
+					betreuung
 				</span>
-				Kunden-
-				<br>
-				betreuung
-			</span>
-			 im lokalen Werbemarkt
-		 </h3>
-		<button class="testzugang">
-			<div class="haken">
-			Testzugang anfordern
-			</div>
-		</button>
+				 im lokalen Werbemarkt
+			 </h3>
+	-->
+			<button class="testzugang">
+				<div class="haken">
+				Kostenlosen Testzugang anfordern
+				</div>
+			</button>
+		</div>
 	</div>
-	<div class="functions">
+	<div class="functions grid-wrapper">
 		<ul>
 			<li>
 				<h4 class="headline-pfeil">
@@ -34,15 +39,35 @@
 					Streuverluste minimieren
 					</span>
 				</h4>
-				Reduzieren Sie Streuverluste im Vertrieb Ihrer Onlineprodukte durch qualifizierte Leads. 
+				<p class="function-description">
+					Reduzieren Sie Streuverluste im Vertrieb Ihrer Onlineprodukte durch qualifizierte Leads. 
+				</p>
+				<a href="#">mehr Infos dazu</a>
 			</li>
-			<li class="beschreibung">
-				<img src="img/homepage/kunden.png">
-				Streuverluste minimieren
+			<li>
+				<h4 class="headline-kunden">
+					<span>
+					Ideale Kundenbetreuung
+					</span>
+				</h4>
+				<p class="function-description">
+				Erhalten Sie eine Nachricht sobald einer Ihrer Kunden bei Ihrer Konkurrenz aktiv wird oder sobald er seine Aktivität dort einstellt.
+				</p>
+				<a href="#">mehr Infos dazu</a>
 			</li>
-			<li class="beschreibung">
-				<img src="img/homepage/deal.png">
-				Streuverluste minimieren
+			<li class="lastItem">
+				<h4 class="headline-deal">
+					<span>
+						Deal-Special
+					<span class="aktion">
+						AKTION
+					</span>
+					</span>
+				</h4>
+				<p class="function-description">
+				Erfahren Sie, welches Unternehmen bereits einen Deal geschalten hat und wie erfolgreich der Deal war.
+				</p>
+				<a href="#">mehr Infos dazu</a>
 			</li>
 		</ul>
   </div>
