styles for group navigation

--- a/client/views/navigation/navigation.html
+++ b/client/views/navigation/navigation.html
@@ -2,9 +2,7 @@
   <nav id="top-nav">
     <div class="grid-wrapper">
       <img class="logo" src="/img/logo-top.gif">
-      <span>
-        asdf
-      </span>
+      {{> navCurrentGroup}}
       <ul class="nav-right">
         <li class="tour">Tour</li>
         <li class="home">Home</li>
