gerüst für Tour fertig, 'Aktion' in homepage gefixt

--- a/client/views/homepage/homepage.html
+++ b/client/views/homepage/homepage.html
@@ -24,8 +24,8 @@
 				 im lokalen Werbemarkt
 			 </h3>
 	-->
-			<button class="testzugang">
-				<div class="haken">
+			<button class="testzugang button">
+				<div class="haken button-bild">
 				Kostenlosen Testzugang anfordern
 				</div>
 			</button>
